--- a/amazon.html
+++ b/amazon.html
@@ -52,7 +52,7 @@
     </div>
     
     <div class="main">
-      <div class="products-grid">
+      <div class="products-grid js-products-grid">
         <div class="product-container">
           <div class="product-image-container">
             <img class="product-image"
@@ -198,6 +198,7 @@
           <button class="add-to-cart-button button-primary">
             Add to Cart
           </button>
+          <script src="/scripts/amazon.js"></script>
         </div>
       </div>
     </div>
