--- a/amazon.html
+++ b/amazon.html
@@ -198,7 +198,9 @@
           <button class="add-to-cart-button button-primary">
             Add to Cart
           </button>
-          <script src="/scripts/amazon.js"></script>
+
+          <script src="data/products.js"></script>
+          <script src="scripts/amazon.js"></script>
         </div>
       </div>
     </div>
