--- a/amazon.html
+++ b/amazon.html
@@ -97,7 +97,7 @@
             Added
           </div>
 
-          <button class="add-to-cart-button button-primary">
+          <button class="add-to-cart-button button-primary js-add-to-cart">
             Add to Cart
           </button>
         </div>
@@ -199,8 +199,10 @@
             Add to Cart
           </button>
 
+          <script src="data/cart.js"></script>
           <script src="data/products.js"></script>
           <script src="scripts/amazon.js"></script>
+          
         </div>
       </div>
     </div>
