--- a/amazon.html
+++ b/amazon.html
@@ -92,7 +92,7 @@
 
           <div class="product-spacer"></div>
 
-          <div class="added-to-cart">
+          <div class="added-to-cart js-added-to-cart">
             <img src="images/icons/checkmark.png">
             Added
           </div>
@@ -199,9 +199,8 @@
             Add to Cart
           </button>
 
-          <script src="data/cart.js"></script>
-          <script src="data/products.js"></script>
-          <script src="scripts/amazon.js"></script>
+          
+          <script type="module" src="scripts/amazon.js"></script>
           
         </div>
       </div>
